Workshop-6-jenkins/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-project
  namespace: jenkins-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # backend:
  #   serviceName: default-http-backend
  #   servicePort: 80
  rules:
  - host: jenkins.yogiman.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
